<resources>
    <string name="app_name">BeOK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="freq90dias">Com que frequência semanal você utilizou em média nos últimos \n90 dias?</string>
    <string name="qtd90dias">Qual foi a dose média diária dos seus consumos nesse período?</string>
    <string name="gasto">Qual seu gasto com a droga \npor unidade?</string>
    <string name="baseado_tamanho_cadastro">Qual foi em média o tamanho do seu baseado?</string>
    <string name="baseado_tamanho_meta">Qual será o tamanho do seu baseado em geral?</string>
    <string name="meta_droga">Qual sua meta final em relação a essa droga?</string>
    <string-array name="genero">
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Outro</item>
    </string-array>
    <string-array name="freq">
        <item>1 dia por semana</item>
        <item>2 dias por semana</item>
        <item>De 3 a 5 dias por semana</item>
        <item>Todos os dias</item>
        <item>Nos fins de semana</item>
    </string-array>
    <string-array name="meta_final">
        <item>Abstinência</item>
        <item>Reduzir o uso</item>
    </string-array>
    <string-array name="bebidas">
        <item>Cerveja</item>
        <item>Vinho</item>
        <item>Destilados(Whisky, Vodka)</item>
    </string-array>
    <string-array name="idade">
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
    </string-array>
    <string name="pergunta">&lt;b>%1$d.&lt;/b> &lt;i>%2$s&lt;/i></string>
    <string name="escore">&lt;b>ESCORE FINAL&lt;/b> &lt;br/>Parte do tratamento é saber sobre o que
        você usa.</string>
    <string name="pontos">&lt;b>%1$d&lt;/b>&lt;br/>&lt;i>respostas&lt;br/>corretas&lt;/i>&lt;br/></string>
    <string name="parabens">Parabéns, você está bem atualizado sobre %1$s. Continue se informando.
        É importante saber sobre o que você usa! E ter diferentes pontos de vista.</string>
    <string name="tema1">Introdução ao aplicativo e metas</string>
    <string name="Descricao1">No BeOK você vai ter a oportunidade de escolher qual droga (s) deseja mudar o uso, definir uma meta de tratamento que pode ser de parar de usar ou de reduzir o uso.\n Para definir a meta semanal é importante pensar em qual é sua meta de tratamento. Você lembra? A meta que definiu quando se cadastrou no app.
        Então a meta precisa ser algo que te desafie e que seja possível de ser atingida.\n Agora vamos definir sua meta desta próxima semana?</string>
    <string name="Descricao2">É importante conhecer o que você utiliza, inclusive para poder decidir com mais propriedade se quer continuar consumindo a substância mesmo com as vantagens e desvantagens que ela apresenta. Muitas vezes buscamos informações nas mesmas fontes. Então te convidamos a se abrir para conhecer diferentes pontos de vista
        e rever (ou reforçar) suas concepções sobre sua droga de escolha! </string>
    <string name="Descricao3">Sabemos o quanto lhe é custoso lidar com o uso da substância e do quanto você pode se sentir dividido sobre o parar.
        A ambivalência é muito comum, todos nós em algum momento a vivenciamos: por exemplo, eu gosto de chocolate mas quero emagrecer.
        Com a droga é a mesma coisa. Imagino que você tenha ganhos ao usar, seja pelo ‘barato’ ou porque te ajuda a esquecer os problemas mas também deve te fazer mal, seja físico ou de relacionamento.
        Nessa atividade, convidamos você a pensar nas vantagens e desvantagens de usar ou não a droga.</string>
    <string name="FimAtividade3">Conseguiu preencher o quadro? Foi difícil?
        \nÉ importante você pensar: \n  - Existem prós em usar, mesmo que sejam apenas o efeito da droga e o fato de esquecerem dos problemas. Isso não deve ser negado, pois se não fosse bom usar, eles não estariam aqui tentando parar; \n  - Porém prós de usar são imediatos e momentâneos, enquanto os de não usar, são mais duradouros;\n  - Muitas vezes, pessoas usam drogas para ficarem mais sociáveis, perderem a inibição, ou ficarem menos deprimidas, etc.
        Mas saiba que existem outros meios de lidar com dificuldades que serão trabalhados em sessões seguintes;\n  - As pessoas só param de usar se conseguirem ver vantagens em estar sem consumir;\n  - A vida sem a droga não é uma maravilha para ninguém, mas tem coisas boas sim!
        \nMuitas vezes, apesar dos prós de usar, muitos querem parar, mas talvez tenham dificuldade de  dizer não. A sensação de controle sobre si mesmo também é boa e imaginamos que você já tenha sentido isso antes. Mas para conseguir dizer não é preciso: 1- querer muito parar e 2- um esforço. Mudar não é fácil! Mas você está no caminho.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_terapia2">terapia2</string>
    <string name="responda_aqui">Responda aqui</string>
    <string name="peso_baseado">baseado fino = 0,5 grama\nbaseado normal = 1,2 grama\nbaseado grande = 2 gramas</string>
    <string name="peso_pedra">1 papelote/pino = 1grama</string>
    <string name="title_activity_grupos">Grupos</string>
    <string name="atividade1">1 - Introdução ao app e metas semanais</string>
    <string name="atividade2">2 - Mitos e verdades: álcool, maconha, cocaína e crack</string>
    <string name="atividade3">3 - Motivação: prós e contras de consumir a substância</string>
</resources>