<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingBottom="8dp"
    android:background="@drawable/bg_terapia"
    android:theme="@style/MyTheme"
    tools:context="beok.beok.TherapyMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Atividades Terapêuticas"
            android:textSize="@dimen/question_txt_size"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/open_therapy_module_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/answer_txt_size"
            android:gravity="left"
            android:text="@string/atividade1"
            android:background="@null"/>

        <Button
            android:id="@+id/open_therapy_module_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/answer_txt_size"
            android:gravity="left"
            android:text="@string/atividade2"
            android:background="@null"/>

        <Button
            android:id="@+id/open_therapy_module_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/answer_txt_size"
            android:gravity="left"
            android:text="@string/atividade3"
            android:background="@null"/>

    </LinearLayout>

</LinearLayout>